--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
 <title>SPI LAB GROUP</title>
 <link rel="shortcut icon" href="{{ url_for('static', filename='media/img/favicon.ico') }}">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-<link rel="canonical" href="https://websitedemos.net/outdoor-adventure-02/" />
+<link rel="canonical" href="http://127.0.0.1:5000/" />
 
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
